# tinkaria

./: .gitignore  .impeccable.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  index.html  package.json  tsconfig.json  vite.config.ts
.c3/: README.md  c3.db  code-map.yaml  component-identity-mapping.json
.c3/adr/: adr-20260330-c3-adoption.md  adr-20260330-harden-coding-rules.md  adr-20260330-nats-migration-topology.md  adr-20260330-nats-transport-migration.md  adr-20260331-compress-nats-payloads.md  adr-20260331-dev-mode-inspector.md  adr-20260331-split-chat-snapshot-channels.md  adr-20260331-transcript-performance-fixes.md  adr-20260401-chunked-transcript-loading.md  adr-20260401-fix-c3-0-codemap-warning.md  adr-20260401-fix-chat-submit-duplication.md  adr-20260401-fix-first-chat-entry-duplication.md  adr-20260401-fix-missing-local-file-preview-command.md  adr-20260401-fix-preview-dialog-full-content.md  adr-20260401-fix-resume-session-search.md  adr-20260401-implement-full-preview-dialog-content.md  (+283 more)
.c3/refs/: ref-pwa.md  (+25 more)
docs/: durable-project-coordination.md
public/: manifest.webmanifest  sw.js
scripts/: copy-legacy-transcripts.ts  dev-server.ts  dev.ts  generate-pwa-icons.ts  perf-nats-baseline.ts  verify-journey.ts
src/: index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bootstrap.rs  logging.rs  main.rs  manifest.rs  settings.rs  tray.rs  webview.rs
tasks/: lessons.md  todo.md
tmp/: render-pug-example.tsx
(+584 files in other folders)
