[package]
name = "tinkaria-desktop"
version = "0.1.0"
description = "Tinkaria companion"
authors = ["lagz0ne"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
async-nats = "0.47.0"
base64 = "0.22.1"
futures-util = "0.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "webview-data-url"] }
